<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentLayoutStyle"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/back_button"
        style="@style/WrapContentLayoutStyle"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/primary"
        android:textSize="@dimen/primary_text_size"
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        android:paddingVertical="4dp"
        android:paddingHorizontal="12dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:fontFamily="@font/ys_text_medium"
        app:icon="@drawable/ic_arrow_back"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/primary" />

    <LinearLayout
        style="@style/VerticalLinearLayoutStyle">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="@color/white"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:fontFamily="@font/ys_text_regular"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:text="@string/share_app"
            android:drawableEnd="@drawable/ic_share"
            style="@style/SettingsButtonStyle" />

        <Button
            android:text="@string/support"
            android:drawableEnd="@drawable/ic_support"
            style="@style/SettingsButtonStyle" />

        <Button
            android:text="@string/terms_of_use"
            android:drawableEnd="@drawable/ic_arrow_forward"
            style="@style/SettingsButtonStyle" />

    </LinearLayout>
</LinearLayout>