<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#3772E7"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/playlist_maker"
        android:textColor="#ffffff"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:text="@string/search"
            android:textColor="#1A1B22"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/ic_search"
            app:cornerRadius="16dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="#1A1B22" />

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:text="@string/media"
            android:textColor="#1A1B22"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/ic_media"
            app:cornerRadius="16dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="#1A1B22" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:text="@string/settings"
            android:textColor="#1A1B22"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/ic_settings"
            app:cornerRadius="16dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="#1A1B22" />

    </LinearLayout>
</LinearLayout>